0032672: Coding Rules - eliminate GCC9 compiler warnings -Warray-bounds -fsantizize=undefined